Add header for polygon

--- a/doc/source/polygons/polygonoperations.ipynb
+++ b/doc/source/polygons/polygonoperations.ipynb
@@ -5,6 +5,8 @@
    "id": "98cee297-1d0c-4238-83cb-2eca86431fde",
    "metadata": {},
    "source": [
+    "# Polygon operations\n",
+    "\n",
     "Polygons are essential to the tools developed in teqpflsh. The [GEOS](https://libgeos.org/) C++ library is used for all the polygon operations. Profiling is provided in this file to indicate the computational speed of operations with this library.\n",
     "\n",
     "One of the key operations in ``teqpflsh`` is to take an arbitrary polygon and sample it evenly. This is for instance how the single-phase points are distributed within the single-phase polygon(s). For efficiency, this process is done by first breaking up the non-intersecting polygon into a number of triangles. The reason for that process is that sampling a triangle evenly is easy, and you weight the samples of the triangles by their area to get the evenly sampled polygon. This generates samples within the polygon. To get there, first examples are shown of operations on polygons powered by the tools in ``teqpflsh`` followed by the even sampling."
