Add the test in Python in jupyter notebook

--- a/doc/source/superancillary/SuperancillaryWater.ipynb
+++ b/doc/source/superancillary/SuperancillaryWater.ipynb
@@ -16,19 +16,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e65a1364",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-12-20T19:12:59.376044Z",
-     "iopub.status.busy": "2024-12-20T19:12:59.375748Z",
-     "iopub.status.idle": "2024-12-20T19:12:59.626857Z",
-     "shell.execute_reply": "2024-12-20T19:12:59.626589Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
     "import timeit\n",
-    "import functools \n",
+    "import functools\n",
+    "import itertools\n",
+    "from dataclasses import dataclass\n",
     "\n",
     "import numpy as np \n",
     "import matplotlib.pyplot as plt\n",
@@ -62,14 +57,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9df81f71-d329-4b60-b4f0-f9323cad6f04",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-12-20T19:12:59.628466Z",
-     "iopub.status.busy": "2024-12-20T19:12:59.628287Z",
-     "iopub.status.idle": "2024-12-20T19:12:59.636937Z",
-     "shell.execute_reply": "2024-12-20T19:12:59.636691Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "j = json.load(open('superancillaryJSON/WATER_exps.json'))\n",
@@ -85,14 +73,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "17aeac7b-62d5-4b67-b074-2a9919923beb",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-12-20T19:12:59.638260Z",
-     "iopub.status.busy": "2024-12-20T19:12:59.638171Z",
-     "iopub.status.idle": "2024-12-20T19:12:59.657983Z",
-     "shell.execute_reply": "2024-12-20T19:12:59.657790Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "AS = CP.AbstractState('HEOS', 'Water')\n",
@@ -120,14 +101,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "2b52ebc8",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-12-20T19:12:59.659118Z",
-     "iopub.status.busy": "2024-12-20T19:12:59.659019Z",
-     "iopub.status.idle": "2024-12-20T19:13:00.010988Z",
-     "shell.execute_reply": "2024-12-20T19:13:00.010758Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Solving for temperature given saturated liquid density, around the density maximum\n",
@@ -179,15 +153,24 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6bc4219d",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-12-20T19:13:00.012229Z",
-     "iopub.status.busy": "2024-12-20T19:13:00.012135Z",
-     "iopub.status.idle": "2024-12-20T19:13:01.185346Z",
-     "shell.execute_reply": "2024-12-20T19:13:01.185124Z"
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "T(rho) takes 0.6365826670080423 μs/call\n",
+      "so the inversion is much slower, and here there are two candidate regions, so it is again two times worse than normal fluids, which would be more like:\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "T(rho) takes 0.449145375052467 μs/call when there is only one solution\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "# Time forward evalution of a chebyshev expansion\n",
     "T = np.linspace(273.16, 290, 1000000)\n",
@@ -226,14 +209,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "1338ce45-8aa4-4da9-8c3b-ae9a684a8382",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-12-20T19:13:01.186684Z",
-     "iopub.status.busy": "2024-12-20T19:13:01.186573Z",
-     "iopub.status.idle": "2024-12-20T19:13:01.188402Z",
-     "shell.execute_reply": "2024-12-20T19:13:01.188191Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "T_K, steps = ca.get_x_for_y(y=20250)[0]\n",
@@ -252,14 +228,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "0daccc7c",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-12-20T19:13:01.189550Z",
-     "iopub.status.busy": "2024-12-20T19:13:01.189456Z",
-     "iopub.status.idle": "2024-12-20T19:13:01.311706Z",
-     "shell.execute_reply": "2024-12-20T19:13:01.311464Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "ca = sa.get_approx1d(k='D', q=0)\n",
@@ -303,15 +272,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ee4a928e-5e37-4237-afd5-a62ffb35e9d6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "eps = 1e-6\n",
+    "Tt = 273.16\n",
+    "Tc = 647.0959999999867\n",
+    "\n",
+    "for T in np.linspace(Tt, Tc-eps, 10000):\n",
+    "    p = sa.get_yval(T=T, q=1, k='P')\n",
+    "    Tnew = sa.get_T_from_p(p=p)\n",
+    "    DELTAT = Tnew-T\n",
+    "    if abs(DELTAT) > 0.001:\n",
+    "        print(T, p, Tnew-T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "88ee67da",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-12-20T19:13:01.313004Z",
-     "iopub.status.busy": "2024-12-20T19:13:01.312906Z",
-     "iopub.status.idle": "2024-12-20T19:13:01.465745Z",
-     "shell.execute_reply": "2024-12-20T19:13:01.465489Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "caV = sa.get_approx1d(k='D', q=1)\n",
@@ -364,6 +345,89 @@
     "# plt.yscale('log')\n",
     "plt.xscale('log')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7444ff7e-a446-4b55-860e-346411492b5a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "eps = 1e-6\n",
+    "\n",
+    "Tt = 273.16\n",
+    "Tc = 647.0959999999867\n",
+    "\n",
+    "# A class storing the info for a single two-phase point\n",
+    "@dataclass\n",
+    "class TwoPhasePoint:\n",
+    "    T: float\n",
+    "    Q: float\n",
+    "    D: float\n",
+    "    H: float\n",
+    "    S: float\n",
+    "    U: float\n",
+    "    P: float\n",
+    "\n",
+    "@dataclass\n",
+    "class TwoPhaseResult:\n",
+    "    Terr: float\n",
+    "    Qerr: float\n",
+    "    elap_us: float\n",
+    "    count: float\n",
+    "    proppair: list[str]\n",
+    "\n",
+    "# Build up database of points for two-phase data\n",
+    "points = []\n",
+    "for T in np.linspace(Tt, Tc-eps, 300):\n",
+    "    for q in np.linspace(eps, 1-eps, 500):\n",
+    "        pt = TwoPhasePoint(\n",
+    "            T = T, \n",
+    "            Q = q,\n",
+    "            P = sa.get_yval(T=T, q=q, k='P'),\n",
+    "            D = sa.get_yval(T=T, q=q, k='D'),\n",
+    "            H = sa.get_yval(T=T, q=q, k='H'),\n",
+    "            S = sa.get_yval(T=T, q=q, k='S'),\n",
+    "            U = sa.get_yval(T=T, q=q, k='U')\n",
+    "        )\n",
+    "        points.append(pt)\n",
+    "\n",
+    "keys = ['D', 'H', 'S', 'U', 'P', 'T']\n",
+    "\n",
+    "results = []\n",
+    "for proppair in itertools.combinations(keys, 2):\n",
+    "    proppair = sorted(proppair)\n",
+    "    if proppair == ['H', 'U']: continue\n",
+    "    if proppair == ['P', 'T']: continue\n",
+    "        \n",
+    "    val1 = np.array([getattr(pt, proppair[0]) for pt in points])\n",
+    "    val2 = np.array([getattr(pt, proppair[1]) for pt in points])\n",
+    "    \n",
+    "    flash_key = teqpflsh.get_pair_from_chars(*proppair)\n",
+    "    tic = timeit.default_timer()\n",
+    "    T = np.zeros_like(val1)\n",
+    "    q = np.zeros_like(val2)\n",
+    "    count = np.zeros_like(val2, dtype=int)\n",
+    "    sa.flash_many(flash_key, val1, val2, T, q, count)\n",
+    "    toc = timeit.default_timer()\n",
+    "    \n",
+    "    valQ = np.array([getattr(pt, 'Q') for pt in points])\n",
+    "    valT = np.array([getattr(pt, 'T') for pt in points])\n",
+    "\n",
+    "    DELTAT = np.abs((valT-T))\n",
+    "    badsolns = sum(T < 0) # \n",
+    "    \n",
+    "    results.append(TwoPhaseResult(\n",
+    "        elap_us=(toc-tic)/len(val1)*1e6,\n",
+    "        Terr=float(np.mean(np.abs((valT-T)))),\n",
+    "        Qerr=float(np.mean(np.abs((valQ-q)))),\n",
+    "        count=float(np.mean(count)),\n",
+    "        proppair=proppair\n",
+    "    ))\n",
+    "\n",
+    "for el in sorted(results, key=lambda x: x.elap_us):\n",
+    "    print(el)"
+   ]
   }
  ],
  "metadata": {
@@ -382,7 +446,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
