Move docs to convenience functions in C++

--- a/doc/source/polygons/polygonoperations.ipynb
+++ b/doc/source/polygons/polygonoperations.ipynb
@@ -24,26 +24,10 @@
     "import matplotlib.pyplot as plt\n",
     "import timeit\n",
     "\n",
-    "def makeclosedpoly(x, y, *, ptr):\n",
-    "    \"\"\" Convenience function to construct a closed polygon \"\"\"\n",
-    "    seq = teqpflsh.CoordinateSequence()\n",
-    "    for i in range(len(x)):\n",
-    "        seq.add(x[i], y[i])\n",
-    "    seq.closeRing(True)\n",
-    "    return ptr.createPolygon(seq)\n",
-    "\n",
-    "def getcoords(poly):\n",
-    "    X, Y = [], []\n",
-    "    coords = poly.getCoordinates()\n",
-    "    for j in range(coords.getSize()):\n",
-    "        X.append(coords.getX(j))\n",
-    "        Y.append(coords.getY(j))\n",
-    "    return X, Y\n",
-    "\n",
     "def getcircle(r, N, *, ptr):\n",
     "    t = np.linspace(0, 2*np.pi, 10000)\n",
     "    X,Y = np.cos(t), np.sin(t)\n",
-    "    return makeclosedpoly(X,Y,ptr=ptr)"
+    "    return ptr.makeclosedpolygon(X,Y)"
    ]
   },
   {
@@ -62,21 +46,21 @@
     "# Polygon for a circle\n",
     "t = np.linspace(0, 2*np.pi, 10000)\n",
     "X,Y = np.cos(t), np.sin(t)\n",
-    "poly1 = makeclosedpoly(X, Y, ptr=ptr)\n",
+    "poly1 = ptr.makeclosedpolygon(X, Y)\n",
     "plt.plot(X, Y)\n",
     "\n",
     "# Polygon for a square\n",
-    "x = [0,1,1,0,0]\n",
-    "y = [0,0,1,1,0]\n",
-    "poly2 = makeclosedpoly(x,y,ptr=ptr)\n",
+    "x = np.array([0,1,1,0,0])\n",
+    "y = np.array([0,0,1,1,0])\n",
+    "poly2 = ptr.makeclosedpolygon(x, y)\n",
     "plt.plot(x, y)\n",
     "\n",
     "# Intersection of the circle and the square\n",
-    "Xi, Yi = getcoords(poly1.intersection(poly2))\n",
+    "Xi, Yi = poly1.intersection(poly2).getXY()\n",
     "plt.fill(Xi, Yi, 'lightgrey')\n",
     "\n",
     "# Difference of the circle and the square\n",
-    "Xd, Yd = getcoords(poly1.difference(poly2))\n",
+    "Xd, Yd = poly1.difference(poly2).getXY()\n",
     "plt.fill(Xd, Yd, 'yellow')\n",
     "\n",
     "plt.axis('equal')\n",
@@ -94,14 +78,14 @@
     "\n",
     "# Polygon for a circle\n",
     "poly1 = getcircle(1, 10000, ptr=ptr)\n",
-    "plt.plot(*getcoords(poly1))\n",
+    "plt.plot(*poly1.getXY())\n",
     "\n",
     "# Delaunay triangulation of the circle into triangles that fully cover the original polygon\n",
     "tri = poly1.DelaunayTriangulate()\n",
     "Ngeo = tri.getNumGeometries()\n",
     "for i in range(Ngeo):\n",
     "    geo = tri.getGeometryN(i)\n",
-    "    X, Y = coords2list(geo.getCoordinates())\n",
+    "    X, Y = geo.getXY()\n",
     "    cen = geo.getCentroid()\n",
     "    x, y = cen.getX(), cen.getY()\n",
     "    plt.plot(x, y, 'k.')\n",
@@ -140,7 +124,7 @@
     "# A circle, randomly sampled by first triangulation and then sampling\n",
     "ptr = teqpflsh.GeometryFactoryHolder()\n",
     "circ = getcircle(1, 10000, ptr=ptr)\n",
-    "X, Y = getcoords(circ)\n",
+    "X, Y = circ.getXY()\n",
     "\n",
     "# The \"region\", which here is a circle\n",
     "reg = teqpflsh.QuadRegion2D(x=X,y=Y)\n",
@@ -223,7 +207,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
