--- a/doc/source/regionedflasher/MainFlasher.ipynb
+++ b/doc/source/regionedflasher/MainFlasher.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Complete Example\n",
     "\n",
-    "The subcomponents are all joined together into the main flasher class, which combines the superancillary to first check the phase, followed by "
+    "The subcomponents are all joined together into the main flasher class, which combines the superancillary to first check the phase, followed by K-D tree lookup for the best starting point, and finally Newton iteration to get the correct temperature and density"
    ]
   },
   {
@@ -48,6 +48,7 @@
     "sa.add_variable(k='H', caller=functools.partial(calc, AS=AS, key=CP.iHmolar))\n",
     "sa.add_variable(k='S', caller=functools.partial(calc, AS=AS, key=CP.iSmolar))\n",
     "sa.add_variable(k='U', caller=functools.partial(calc, AS=AS, key=CP.iUmolar))\n",
+    "Tcrit = sa.get_approx1d(k='D', q=1).xmax\n",
     "\n",
     "path = f'{teqp.get_datapath()}/dev/fluids/{name}.json'\n",
     "jresid = {\"kind\": \"multifluid\", \"model\": {\"components\": [name], \"root\": teqp.get_datapath()}}\n",
@@ -59,17 +60,40 @@
     ")\n",
     "\n",
     "# Now we make a region with rectangular shape in T, rho coordinates with only its 5 corners\n",
-    "Tmin = 400 # K\n",
+    "Tmin = 240 # K\n",
     "Tmax = 450 # K\n",
     "rhomin = 1e-6 # mol/m³\n",
-    "rhomax = 6000 # mol/m³\n",
+    "rhomax = 12000 # mol/m³\n",
     "Tpoly = np.array([Tmin, Tmin, Tmax, Tmax, Tmin])\n",
     "rhopoly = np.array([rhomin, rhomax, rhomax, rhomin, rhomin])\n",
+    "\n",
+    "def makeVLE(Trange):\n",
+    "    x, y = [], []\n",
+    "    for T in Trange:\n",
+    "        x.append(sa.get_yval(T=float(T), q=1.0, k='D')); y.append(T)\n",
+    "    for T in reversed(Trange):\n",
+    "        x.append(sa.get_yval(T=float(T), q=0.0, k='D')); y.append(T)\n",
+    "    return np.array(x), np.array(y)\n",
+    "\n",
+    "ptr = teqpflsh.GeometryFactoryHolder()\n",
+    "box = ptr.makeclosedpolygon(rhopoly, Tpoly)\n",
+    "VLE = ptr.makeclosedpolygon(*makeVLE(np.linspace(Tmin, Tcrit, 1000)))\n",
+    "rhoreg, Treg = box.difference(VLE).getXY()\n",
+    "\n",
+    "# Plot the region that is being mapped\n",
+    "plt.plot(*box.getXY())\n",
+    "plt.plot(*VLE.getXY())\n",
+    "plt.fill(rhoreg, Treg)\n",
+    "reg = mf.regioned_flasher.get_regions_ro()[0]\n",
+    "propset = reg.propset_Trhogrid\n",
+    "plt.plot(propset.rho, propset.T, 'k.', ms=0.05)\n",
+    "\n",
     "NT = 1000\n",
     "Nrho = 1000\n",
-    "rf.add_region(Tpoly, rhopoly, NT=NT, Nrho=Nrho)\n",
+    "rf.add_region(T=Treg, rho=rhoreg, NT=NT, Nrho=Nrho)\n",
     "for reg in rf.get_regions_rw():\n",
     "    reg.add_pair(proppair=teqpflsh.PropertyPairs.PS, Nsplit=5)\n",
+    "    reg.add_pair(proppair=teqpflsh.PropertyPairs.ST, Nsplit=5)\n",
     "\n",
     "# Build the helper class holding the models for ideal gas and residual Helmholtz energy\n",
     "helm = teqpflsh.teqpHelmholtzInterface(ideal_gas=json.dumps(jidealgas), residual=json.dumps(jresid))\n",
@@ -87,13 +111,40 @@
    "source": [
     "reg = mf.regioned_flasher.get_regions_ro()[0]\n",
     "propset = reg.propset_Trhogrid\n",
+    "\n",
     "val1 = propset.p\n",
     "val2 = propset.s + np.random.random(val1.shape)\n",
     "T = np.zeros_like(val1)\n",
     "rho = np.zeros_like(val1)\n",
     "q = np.zeros_like(val1)\n",
+    "print(len(val1))\n",
     "\n",
-    "%timeit mf.flash_many(teqpflsh.PropertyPairs.PS, val1, val2, T, rho, q)"
+    "tic = timeit.default_timer()\n",
+    "mf.flash_many(teqpflsh.PropertyPairs.PS, val1, val2, T, rho, q)\n",
+    "toc = timeit.default_timer()\n",
+    "print((toc-tic)/len(val1)*1e6, 'μs per flash call')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32439ed1-daf9-4b85-8e56-01acb2b53422",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reg = mf.regioned_flasher.get_regions_ro()[0]\n",
+    "propset = reg.propset_Trhogrid\n",
+    "\n",
+    "val1 = propset.s + np.random.random(val1.shape)\n",
+    "val2 = propset.T\n",
+    "T = np.zeros_like(val1)\n",
+    "rho = np.zeros_like(val1)\n",
+    "q = np.zeros_like(val1)\n",
+    "\n",
+    "tic = timeit.default_timer()\n",
+    "mf.flash_many(teqpflsh.PropertyPairs.ST, val1, val2, T, rho, q)\n",
+    "toc = timeit.default_timer()\n",
+    "print((toc-tic)/len(val1)*1e6, 'μs per flash call')"
    ]
   }
  ],
@@ -113,7 +164,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
