Add information about the memory use, which is nontrivial
Also update to use new convenience methods

--- a/doc/source/KDtree/KDtreefundamentals.ipynb
+++ b/doc/source/KDtree/KDtreefundamentals.ipynb
@@ -9,7 +9,15 @@
     "\n",
     "TODO: what is a K-D tree\n",
     "\n",
-    "TODO: what libraries are used?"
+    "The [nanoflann](https://github.com/jlblancoc/nanoflann) library is used within teqpflsh due to its computational efficiency."
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "a4329548-602c-4174-b3f6-bb7cb4373e5a",
+   "metadata": {},
+   "source": [
+    "The :py:class:`L2TreeHolder` class makes a copy of the data for the tree to ensure that the lifetime of the data copied into the holder is longer than the tree itself. The underlying :py:class:`L2Tree` object then makes a reference to the data held in the the holder class. "
    ]
   },
   {
@@ -23,24 +31,10 @@
     "import teqpflsh\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "def xy2poly(*, X, Y):\n",
-    "    seq1 = teqpflsh.CoordinateSequence()\n",
-    "    for i in range(len(X)):\n",
-    "        seq1.add(X[i], Y[i])\n",
-    "    seq1.closeRing(True)\n",
-    "    return ptr.createPolygon(seq1)\n",
-    "\n",
-    "def boxpoly(*, top, bottom, left, right):\n",
-    "    X = [left, right, right, left, left]\n",
-    "    Y = [bottom, bottom, top, top, bottom]\n",
-    "    return xy2poly(X=X, Y=Y)\n",
-    "\n",
-    "def coords2list(coords):\n",
-    "    X, Y = [], []\n",
-    "    for j in range(coords.getSize()):\n",
-    "        X.append(coords.getX(j))\n",
-    "        Y.append(coords.getY(j))\n",
-    "    return np.array(X), np.array(Y)"
+    "def boxpoly(*, top, bottom, left, right, ptr):\n",
+    "    X = np.array([left, right, right, left, left])\n",
+    "    Y = np.array([bottom, bottom, top, top, bottom])\n",
+    "    return ptr.makeclosedpolygon(X, Y)"
    ]
   },
   {
@@ -53,32 +47,26 @@
     "ptr = teqpflsh.GeometryFactoryHolder()\n",
     "\n",
     "# Polygon for the shifted circle\n",
-    "seq1 = teqpflsh.CoordinateSequence()\n",
     "t = np.linspace(0, 2*np.pi, 10000)\n",
     "X = 0.5 + 0.3*np.cos(t)\n",
     "Y = 0.3*np.sin(t)\n",
-    "for i in range(len(t)):\n",
-    "    seq1.add(X[i], Y[i])\n",
-    "seq1.closeRing(True)\n",
-    "poly1 = ptr.createPolygon(seq1)\n",
-    "poly2 = boxpoly(left=0, right=1, bottom=0, top=1)\n",
+    "poly1 = ptr.makeclosedpolygon(X, Y)\n",
+    "poly2 = boxpoly(left=0, right=1, bottom=0, top=1, ptr=ptr)\n",
     "\n",
     "# Polygon for the square [0,1]x[0,1] minus small circle\n",
     "poly = poly2.difference(poly1)\n",
-    "X, Y = coords2list(poly.getCoordinates())\n",
+    "X, Y = poly.getXY()\n",
     "\n",
     "def do_one(*, NKD, Nsample, plot=False, close=True):\n",
-    "    def get_random(N):\n",
+    "    def get_random(NKD):\n",
     "        \"\"\" Random points for the tree \"\"\"\n",
     "        XX, YY = [], []\n",
-    "        for i in range(N*10):\n",
+    "        while len(XX) < NKD:\n",
     "            x_, y_ = np.random.random(2)\n",
     "            pt = ptr.createPoint(float(x_), float(y_))\n",
     "            if poly.containsPoint(pt):\n",
     "                XX.append(x_)\n",
     "                YY.append(y_)\n",
-    "                if len(XX) == N:\n",
-    "                    break\n",
     "        return XX, YY\n",
     "    XX, YY = get_random(NKD)\n",
     "    \n",
@@ -95,10 +83,18 @@
     "    if plot:\n",
     "        plt.axis('off')\n",
     "        plt.axis('equal');\n",
-    "    if close:\n",
-    "        plt.close()\n",
+    "        if close:\n",
+    "            plt.close()\n",
     "    \n",
-    "    return np.mean(np.array(d2)**0.5)"
+    "    return np.mean(np.array(d2)**0.5), tree.get_used_bytes()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ec39b27b-1ab0-43f0-9865-736e54b21e09",
+   "metadata": {},
+   "source": [
+    "Here is a small number of \"lighthouse\" points randomly distributed in the domain. A random point is first pulled from [0,1]x[0,1] and checked whether it is within the domain or not. This so-called point-in-polygon problem is quite slow (relatively)."
    ]
   },
   {
@@ -108,7 +104,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "do_one(NKD=20, Nsample=100, plot=True, close=False)"
+    "do_one(NKD=100, Nsample=100, plot=True, close=False);"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "799a54e4-dc2d-4551-a040-9ea475124465",
+   "metadata": {},
+   "source": [
+    "As you increase the number of points $N$ inside the domain, the distance to the nearest point goes down like $N^{-1/2}$ and in general the scaling should be like $N^{-1/D}$ where $D$ is the number of spatial dimensions (I think). \n",
+    "\n",
+    "The required memory is linear with the number of points in the K-D tree(!)"
    ]
   },
   {
@@ -119,17 +126,24 @@
    "outputs": [],
    "source": [
     "Ntrees = np.geomspace(10, 10**4, dtype=int)\n",
-    "d2s = [do_one(NKD=NKD_, Nsample=10**3) for NKD_ in Ntrees]\n",
-    "plt.plot(Ntrees, d2s, 'o')\n",
+    "\n",
+    "fig, (ax1, ax2) = plt.subplots(2, 1, sharex=True)\n",
+    "\n",
+    "d2s = [do_one(NKD=NKD_, Nsample=10**3)[0] for NKD_ in Ntrees]\n",
+    "ax1.plot(Ntrees, d2s, 'o')\n",
     "\n",
     "pf = np.polyfit(np.log(Ntrees), np.log(d2s), 1)\n",
     "xx = np.geomspace(np.min(Ntrees), np.max(Ntrees), 1000)\n",
-    "plt.plot(xx, np.exp(np.polyval(pf, np.log(xx))), dashes=[2,2], color='r')\n",
-    "plt.text(100, 0.07, rf'$y=\\exp({pf[1]:0.3f})N^{{{pf[0]:0.3f}}}$', color='r')\n",
+    "ax1.plot(xx, np.exp(np.polyval(pf, np.log(xx))), dashes=[2,2], color='r')\n",
+    "ax1.text(100, 0.07, rf'$y=\\exp({pf[1]:0.3f})N^{{{pf[0]:0.3f}}}$', color='r')\n",
     "    \n",
-    "plt.xscale('log')\n",
-    "plt.yscale('log')\n",
-    "plt.gca().set(xlabel=r'$N_{\\rm points}$', ylabel=r'$d_{NN}$');\n",
+    "ax1.set_xscale('log')\n",
+    "ax1.set_yscale('log')\n",
+    "ax1.set(ylabel=r'$d_{NN}$')\n",
+    "\n",
+    "MiBs = [do_one(NKD=NKD_, Nsample=10**3)[1]/1024**2 for NKD_ in Ntrees]\n",
+    "ax2.plot(Ntrees, MiBs, 'o')\n",
+    "ax2.set(xlabel=r'$N_{\\rm points}$', ylabel='MiB required');\n",
     "\n",
     "# del ptr"
    ]
@@ -151,7 +165,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
