Give the right format of the cell

--- a/doc/source/KDtree/KDtreefundamentals.ipynb
+++ b/doc/source/KDtree/KDtreefundamentals.ipynb
@@ -15,9 +15,16 @@
   {
    "cell_type": "raw",
    "id": "a4329548-602c-4174-b3f6-bb7cb4373e5a",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "raw_mimetype": "text/restructuredtext",
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
-    "The :py:class:`L2TreeHolder` class makes a copy of the data for the tree to ensure that the lifetime of the data copied into the holder is longer than the tree itself. The underlying :py:class:`L2Tree` object then makes a reference to the data held in the the holder class. "
+    "The :py:class:`L2TreeHolder` class makes a copy of the data for the tree to ensure that the lifetime of the data copied into the holder is longer than the tree itself. The underlying :py:class:`L2Tree` object obtained via the ``.tree`` attribute then makes a reference to the data held in the holder class. "
    ]
   },
   {
