Long names are required

--- a/doc/source/KDtree/KDtreefundamentals.ipynb
+++ b/doc/source/KDtree/KDtreefundamentals.ipynb
@@ -24,7 +24,7 @@
     "tags": []
    },
    "source": [
-    "The :py:class:`L2TreeHolder` class makes a copy of the data for the tree to ensure that the lifetime of the data copied into the holder is longer than the tree itself. The underlying :py:class:`L2Tree` object obtained via the ``.tree`` attribute then makes a reference to the data held in the holder class. "
+    "The :py:class:`L2TreeHolder <teqpflsh._teqpflsh_impl.L2TreeHolder>` class makes a copy of the data for the tree to ensure that the lifetime of the data copied into the holder is longer than the tree itself. The underlying :py:class:`L2Tree <teqpflsh._teqpflsh_impl.L2Tree>` object obtained via the ``.tree`` attribute then makes a reference to the data held in the holder class. "
    ]
   },
   {
