Add docs for superancillary iteration

--- a/doc/source/superancillary/SuperancillaryWater.ipynb
+++ b/doc/source/superancillary/SuperancillaryWater.ipynb
@@ -21,6 +21,7 @@
    "source": [
     "import json\n",
     "import timeit\n",
+    "import tarfile\n",
     "import functools\n",
     "import itertools\n",
     "from dataclasses import dataclass\n",
@@ -60,7 +61,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "j = json.load(open('superancillaryJSON/WATER_exps.json'))\n",
+    "FLD = 'WATER'\n",
+    "with tarfile.open('superancillaryJSON.tar.xz', mode='r:xz') as tar:\n",
+    "    # for member in tar.getmembers(): print(member)\n",
+    "    j = json.load(tar.extractfile(f'./{FLD}_exps.json'))\n",
     "sa = teqpflsh.SuperAncillary(json.dumps(j))\n",
     "\n",
     "ca = sa.get_approx1d(k='D', q=0)\n",
@@ -155,14 +159,6 @@
    "id": "6bc4219d",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "T(rho) takes 0.6365826670080423 μs/call\n",
-      "so the inversion is much slower, and here there are two candidate regions, so it is again two times worse than normal fluids, which would be more like:\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -446,7 +442,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
