--- a/doc/source/regionedflasher/MainFlasher.ipynb
+++ b/doc/source/regionedflasher/MainFlasher.ipynb
@@ -84,9 +84,6 @@
     "plt.plot(*box.getXY())\n",
     "plt.plot(*VLE.getXY())\n",
     "plt.fill(rhoreg, Treg)\n",
-    "reg = mf.regioned_flasher.get_regions_ro()[0]\n",
-    "propset = reg.propset_Trhogrid\n",
-    "plt.plot(propset.rho, propset.T, 'k.', ms=0.05)\n",
     "\n",
     "NT = 1000\n",
     "Nrho = 1000\n",
@@ -99,7 +96,11 @@
     "helm = teqpflsh.teqpHelmholtzInterface(ideal_gas=json.dumps(jidealgas), residual=json.dumps(jresid))\n",
     "\n",
     "# Build the main flasher which includes all the parts\n",
-    "mf = teqpflsh.MainFlasher(regions=rf, superancillary=sa, helm=helm)"
+    "mf = teqpflsh.MainFlasher(regions=rf, superancillary=sa, helm=helm)",
+    "\n",
+    "reg = mf.regioned_flasher.get_regions_ro()[0]\n",
+    "propset = reg.propset_Trhogrid\n",
+    "plt.plot(propset.rho, propset.T, 'k.', ms=0.05)\n"
    ]
   },
   {
