--- a/doc/source/regionedflasher/MainFlasher.ipynb
+++ b/doc/source/regionedflasher/MainFlasher.ipynb
@@ -80,11 +80,6 @@
     "VLE = ptr.makeclosedpolygon(*makeVLE(np.linspace(Tmin, Tcrit, 1000)))\n",
     "rhoreg, Treg = box.difference(VLE).getXY()\n",
     "\n",
-    "# Plot the region that is being mapped\n",
-    "plt.plot(*box.getXY())\n",
-    "plt.plot(*VLE.getXY())\n",
-    "plt.fill(rhoreg, Treg)\n",
-    "\n",
     "NT = 1000\n",
     "Nrho = 1000\n",
     "rf.add_region(T=Treg, rho=rhoreg, NT=NT, Nrho=Nrho)\n",
@@ -96,11 +91,15 @@
     "helm = teqpflsh.teqpHelmholtzInterface(ideal_gas=json.dumps(jidealgas), residual=json.dumps(jresid))\n",
     "\n",
     "# Build the main flasher which includes all the parts\n",
-    "mf = teqpflsh.MainFlasher(regions=rf, superancillary=sa, helm=helm)",
+    "mf = teqpflsh.MainFlasher(regions=rf, superancillary=sa, helm=helm)\n",
     "\n",
+    "# Plot the region that is being mapped\n",
+    "plt.plot(*box.getXY())\n",
+    "plt.plot(*VLE.getXY())\n",
+    "plt.fill(rhoreg, Treg)\n",
     "reg = mf.regioned_flasher.get_regions_ro()[0]\n",
     "propset = reg.propset_Trhogrid\n",
-    "plt.plot(propset.rho, propset.T, 'k.', ms=0.05)\n"
+    "plt.plot(propset.rho, propset.T, 'k.', ms=0.05)"
    ]
   },
   {
