Fix broken notebook
I was looking at the wrong one...

--- a/doc/source/regionedflasher/RegionedFlasher.ipynb
+++ b/doc/source/regionedflasher/RegionedFlasher.ipynb
@@ -58,7 +58,7 @@
     "NT = 1000\n",
     "Nrho = 1000\n",
     "\n",
-    "rf.add_region(Tpoly, rhopoly, NT=NT, Nrho=Nrho)\n",
+    "rf.add_region(T=Tpoly, rho=rhopoly, NT=NT, Nrho=Nrho)\n",
     "print('# of regions:', len(rf.get_regions_ro()))"
    ]
   },
@@ -273,7 +273,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
