Update outlook with links

--- a/doc/source/background/Outlook.ipynb
+++ b/doc/source/background/Outlook.ipynb
@@ -9,11 +9,10 @@
     "\n",
     "The code works pretty well. The iteration approach is quite fast and reliable.\n",
     "\n",
-    "There are a number of outstanding items:\n",
+    "There are some outstanding items:\n",
     "\n",
-    "* [The GEOS library is available under the LGPL license](https://github.com/libgeos/geos/blob/main/COPYING). To get the python wheels to work properly with RPATH, I had to statically link GEOS. That means that ``teqpflsh`` falls under a LGPL license. I tried every thing I could think of to fix the RPATH issues inside the wheel, nothing worked. It is a high priority to resolve this to allow any library linking against ``teqpflsh`` to use whatever license terms it wants.\n",
     "* Look into the memory used by the K-D trees, see if it can be further optimized because some copies of data are being made and some of these copies can in theory at least be avoided\n",
-    "* Resolve issues where the bounding polygon of a region is not simple (has self-intersection). This happens especially in the case of water at low temperatures. Such self-intersection does not happen in $T$, $\\rho$ coordinates, but does happen in other coordinate sets\n",
+    "* Resolve issues where the bounding polygon of a region is not simple (has self-intersection). This happens especially in the case of water at low temperatures. Such self-intersection does not happen in $T$, $\\rho$ coordinates, but does happen in other coordinate sets. The necessary functions in the C++ interface are https://libgeos.org/doxygen/classgeos_1_1simplify_1_1DouglasPeuckerSimplifier.html and related classes. See alternatively: https://libgeos.org/doxygen/MakeValid_8h_source.html\n",
     "* Automate generation of the bounding polygons in C++. Currently the bounding polygon is generated in Python and passed into C++. To do so will require to implement the melting line models, and additional conversions might be required in [REFPROP-interop](https://github.com/ianhbell/REFPROP-interop)\n",
     "* See if there is a better way to define the bounding edges of the regions. Perhaps splines or something like that might be better, enabling a more efficient representation, not requiring as many points to remap into other coordinates more smoothly."
    ]
