Update the docs about self-intersection

--- a/doc/source/background/Outlook.ipynb
+++ b/doc/source/background/Outlook.ipynb
@@ -12,7 +12,7 @@
     "There are some outstanding items:\n",
     "\n",
     "* Look into the memory used by the K-D trees, see if it can be further optimized because some copies of data are being made and some of these copies can in theory at least be avoided\n",
-    "* Resolve issues where the bounding polygon of a region is not simple (has self-intersection). This happens especially in the case of water at low temperatures. Such self-intersection does not happen in $T$, $\\rho$ coordinates, but does happen in other coordinate sets. The necessary functions in the C++ interface are https://libgeos.org/doxygen/classgeos_1_1simplify_1_1DouglasPeuckerSimplifier.html and related classes. See alternatively: https://libgeos.org/doxygen/MakeValid_8h_source.html\n",
+    "* Resolve issues where the bounding polygon of a region is not simple (has self-intersection). This happens especially in the case of water at low temperatures. Such self-intersection does not happen in $T$, $\\rho$ coordinates, but does happen in other coordinate sets. The C++ method (https://libgeos.org/doxygen/MakeValid_8h_source.html) is exposed as ``Geometry.make_valid``. It has not been fully implemented into the flashing code.\n",
     "* Automate generation of the bounding polygons in C++. Currently the bounding polygon is generated in Python and passed into C++. To do so will require to implement the melting line models, and additional conversions might be required in [REFPROP-interop](https://github.com/ianhbell/REFPROP-interop)\n",
     "* See if there is a better way to define the bounding edges of the regions. Perhaps splines or something like that might be better, enabling a more efficient representation, not requiring as many points to remap into other coordinates more smoothly."
    ]
