Move sample_random into a method accessible outside

--- a/doc/source/polygons/polygonvalidity.ipynb
+++ b/doc/source/polygons/polygonvalidity.ipynb
@@ -14,19 +14,32 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6b45a70c",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import teqpflsh\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "teqpflsh.__version__"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "b6182393",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "ptr = teqpflsh.GeometryFactoryHolder()\n",
@@ -42,8 +55,44 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8e9c1d5-3aa6-44b3-a766-9c413395e1c5",
+   "id": "ca4134dc-7c34-4894-a289-f51717086c14",
    "metadata": {},
+   "source": [
+    "The reason this matters in this context is that we need to be able to sample the domain randomly to generate guess values."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82c3f307-8322-4fa8-be80-f245ae866360",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": [
+     "raises-exception"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "# This doesn't work because the triangulation fails because the geometry is not valid\n",
+    "N = 10000\n",
+    "x = np.zeros((N, ))\n",
+    "y = np.zeros((N, ))\n",
+    "teqpflsh.sample_random(poly1, 10000, x, y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a8e9c1d5-3aa6-44b3-a766-9c413395e1c5",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
     "Now we need to break up the polygon into portions that are simple (non self-intersecting) with the MakeValid class of geos : https://libgeos.org/doxygen/classgeos_1_1operation_1_1valid_1_1MakeValid.html"
    ]
@@ -52,7 +101,13 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "038ff472-6551-47c6-bb33-151f1ff4e483",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "simpl = poly1.make_valid()\n",
@@ -65,6 +120,27 @@
     "    print(f'N: {pI.getNumGeometries()}')\n",
     "    print(f'simple: {pI.isSimple}')\n",
     "    print(f'valid: {pI.isValid}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "30b47157-b3c5-4090-a4f4-10a642661cbb",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# And now sampling works after forcing validity\n",
+    "N = 10000\n",
+    "x = np.zeros((N, ))\n",
+    "y = np.zeros((N, ))\n",
+    "teqpflsh.sample_random(simpl, 10000, x, y)\n",
+    "plt.plot(x, y, '.', ms=1);"
    ]
   }
  ],
